src/AIS/AIS_Manipulator.cxx
@@ -843,10 +843,18 @@ void AIS_Manipulator::updateTransformation()
   if (myIsZoomPersistentMode)
   {
     if (TransformPersistence().IsNull()
-    ||  TransformPersistence()->Mode() != Graphic3d_TMF_ZoomPers
+    ||  TransformPersistence()->Mode() != Graphic3d_TMF_AxialZoomPers
     || !TransformPersistence()->AnchorPoint().IsEqual (myPosition.Location(), 0.0))
     {
-      setTransformPersistence (new Graphic3d_TransformPers (Graphic3d_TMF_ZoomPers, myPosition.Location()));
+      setTransformPersistence (new Graphic3d_TransformPers (Graphic3d_TMF_AxialZoomPers, myPosition.Location()));
+    }
+  }
+  else
+  {
+    if (TransformPersistence().IsNull()
+    || TransformPersistence()->Mode() != Graphic3d_TMF_AxialScalePers)
+    {
+      setTransformPersistence (new Graphic3d_TransformPers (Graphic3d_TMF_AxialScalePers, myPosition.Location()));
     }
   }
 }
@@ -931,7 +939,7 @@ void AIS_Manipulator::SetZoomPersistence (const Standard_Boolean theToEnable)
 
   if (!theToEnable)
   {
-    setTransformPersistence (Handle(Graphic3d_TransformPers)());
+    setTransformPersistence (new (Graphic3d_TransformPers)(Graphic3d_TMF_AxialScalePers));
   }
 
   updateTransformation();
